# rich-admonitions

./: .coveragerc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
admonitions/: __init__.py  __metadata__.py
docs/: conf.py  index.md
src/admonitions/: __init__.py  __metadata__.py  skeleton.py
tests/: __init__.py  conftest.py  test_imports.py  test_skeleton.py
