[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rich-admonitions"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "rich",
  "terminal",
  "formatting",
  "admonitions",
]
authors = [
  { name = "Joe Carpinelli", email = "jdcarpinelli@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rich",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/rich-admonitions#readme"
Issues = "https://github.com/unknown/rich-admonitions/issues"
Source = "https://github.com/unknown/rich-admonitions"

[tool.hatch.version]
path = "admonitions/__metadata__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=admonitions --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "admonitions/__metadata__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
